style.css
body {
  font-family: Arial, Helvetica, sans-serif;
  background: linear-gradient(to bottom, #d6f1fa 0%, rgb(239, 212, 212) 100%);
}

#app {
  height: 100%;
  margin: 0 auto;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

footer {
  position: relative;
  bottom: 0;
  width: 100%;
  margin: 0 auto;
  background-color: white;
  border-radius: 10px;
}

section {
  background-color: white;
  border-radius: 15px;
}

h1, h2, h3 {
  margin: 0 auto;
  margin-bottom: 1rem;
  font-weight: normal;
  text-align: center;
}

a {
  text-decoration: black;
}

#main-nav-bar {
  width: 900px;
  height: 60px;
  background-color: #333;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  border-radius: 22px;
  margin-top: 1em;
  padding: auto;
  word-spacing: 10px;
}

.links-container {
  padding-inline-start: 0;
}

#fixed-button {
  position: sticky;
  bottom: 20px;
  left: 20px;
  width: 180px;
  font-size: medium;
  z-index: 1;
}

.collapsed {
  display: none;
}

.side-nav {
  height: 100%;
  width: 0;
  position: fixed;
  top: 0;
  left: 0;
  background-color: #111;
  overflow-x: hidden;
  padding-top: 60px;
  transition: 0.2s;
  z-index: 2;
}

.side-nav .closebutton {
  position: absolute;
  top: 0;
  right: 25px;
  font-size: 36px;
  margin-left: 50px;
  margin-top: 10px;
  width: 40px;
  height: 40px;
}

.closebutton {
  font-size: 36px;
  background-color: aliceblue;
  border: none;
  width: 40px;
}

#page-content {
  max-width: 900px;
  padding: 20px;
  transition: 0.2s;
  justify-content: center;
}


button {
  cursor: pointer;
  display: inline-block;
  background: #333;
  color: white;
  font-size: 18px;
  border: 0;
  padding: 0.7em 2.5em;
  padding-left: 20px;
  padding-right: 20px;
  width: auto;
  min-width: 190px;
}

button:focus {
  outline: none;
}

button:hover {
  background: #00bbd45d;
}

button.selected {
  background: #00bcd4;
}

.vertical-container {
  width: 80vw;
  max-width: 950px;
  height: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  flex-wrap: nowrap;
}

.vertical-card {
  cursor: pointer;
  width: 240px;
  height: calc(50% - 1rem);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 1em;
  margin-bottom: 1rem;
  border-radius: 15px;
  background-color: #fafafa;
  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
}

/* when hovered over */
.vertical-card:hover {
  background-color: #fafafadb;
  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.4);
}

.horizontal-container {
  max-width: 800px;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  align-items: center;
  flex-wrap: nowrap;
  margin: 0 auto;
}

.horizontal-card {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  flex-wrap: nowrap;
  border-radius: 10px;
  margin-top: 10px;
  margin-bottom: 10px;
  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
}

/* The Modal (background) */
.modal {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  margin-top: 0%;
  z-index: 4; /* Sit on top */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: hidden; /* Disable scroll */
  background-color: rgb(0,0,0); /* Fallback color */
  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}

/* Modal Content/Box */
.modal-content {
  background-color: #fefefe;
  margin: 5% auto; /* 15% from the top and centered */
  padding: 20px;
  border: 1px solid #888;
  height: 90vh;
  width: 80%; /* Could be more or less, depending on screen size */
  border-radius: 15px;
  overflow-y: auto;
}

/* The Close Button */
.modal-close-btn {
  height: 30px;
  padding: 5px;
  font-size: 20px;
  font-weight: bold;
  margin-top: 20px;
}

.modal-close-btn:hover, .modal-close-btn:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

.selection-list {
  margin-top: 5px;
  width: fit-content;
}

.data-entry-area {
  width: 300px;
  height: 30px;
}

@media screen and (max-width: 600px) {
  /* modify ui for mobile */

  * {
    width: 95%;
  }

  html {
    margin: 0 auto;
  }

  body {
    width: 100%;
    overflow-x: hidden;
    margin: 0 auto;
  }

  footer {
    width: 90vw;
    overflow-x: hidden;
    margin: 0 auto;
  }

  #app {
    width: 95%;
    height: 100%;
    margin: 0 auto;
  }

  #page-content {
    width: 95%;
    padding-left: 0;
    padding-right: 0;
    margin: 0;
    justify-content: center;
  }

  #main-nav-bar {
    width: 100%;
    position: sticky;
    top: 15px;
    word-spacing: 5px;
  }

  button {
    min-width: 85px;
    font-size: 14px;
    padding: 0.7em 2em;
    padding-left: 4px;
    padding-right: 4px;
  }

  #fixed-button {
    left: 25px;
    bottom: 30px;
    font-size: small;
    width: 60px;
    position: fixed;;
  }

  .side-nav {
    width: 100%;
    height: 96vh;
    overflow-y: hidden;
    overflow-x: hidden;
  }

  /* toggle for side nav */
  .side-nav.toggle {
    width: 0px;
  }

  /* disable vertical page scrolling for chat area */
  #chatbot-area {
    overflow-y: hidden;
    overflow-x: hidden;
  }

  section {
    margin: 0 auto;
  }

  section > .vertical-container {
    width: 95%;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    flex-wrap: nowrap;
    margin: 0 auto;
  }

  .vertical-card {
    width: 95%;
  }
  
  section > .horizontal-container {
    width: 95%;
  }

  .horizontal-card {
    width: 95%;
  }

  #modal-window-body {
    height: fit-content;
  }

  #modal-window-body > h3 {
    font-size: 15px;
  }

  #modal-window-map-container {
    height: 40vh;
    margin-bottom: 30px;
  }

  #modal-window-map-container > iframe {
    height: 100%;
    width: 100%;
  }

  #modal-close-button {
    margin-top: 35px;
    height: 40px;
  }
}

